# websocket

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: binance_ticker.c
src/: internal.h  io_kqueue.c  io_kqueue.h  os_macos.h  parser_neon.c  parser_neon.h  ringbuffer.c  ringbuffer.h  ssl.c  ssl.h  websocket.c  websocket.h
tests/: README.md  benchmark.c  run_all_tests.sh  test_errors.c  test_helpers.h  test_integration_binance.c  test_integration_stress.c  test_kqueue.c  test_memory.c  test_parser_neon.c  test_performance.c  test_ringbuffer.c  test_stress.c  test_threading.c  test_websocket_reconnect.c
